Доделан блок footer и cover

--- a/index.html
+++ b/index.html
@@ -122,19 +122,19 @@
           <div class="place">
             <div class="place__container">
               <h2 class="place__title">Куршская коса</h2>
-              <img
-                class="place__image"
-                src="./images/place-kosa.jpg"
-                alt="Картинка - куршская коса"
-              />
-            </div>
-            <div class="place__wrapper">
               <div class="place__website">
                 <h3 class="place__url-heading">URL</h3>
                 <a class="place__link" href="http://park-kosa.ru"
                   >park-kosa.ru
                 </a>
               </div>
+            </div>
+            <div class="place__wrapper">
+              <img
+                class="place__image"
+                src="./images/place-kosa.jpg"
+                alt="Картинка - куршская коса"
+              />
               <div>
                 <p class="place__paragraph">
                   Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
@@ -156,13 +156,6 @@
           <div class="place">
             <div class="place__container">
               <h2 class="place__title">Кольский</h2>
-              <img
-                class="place__image"
-                src="./images/place-kolsky.jpg"
-                alt="Картинка - кольский"
-              />
-            </div>
-            <div class="place__wrapper">
               <div class="place__website">
                 <h3 class="place__url-heading">URL</h3>
                 <a
@@ -171,6 +164,13 @@
                   >National Geographic
                 </a>
               </div>
+            </div>
+            <div class="place__wrapper">
+              <img
+                class="place__image"
+                src="./images/place-kolsky.jpg"
+                alt="Картинка - кольский"
+              />
               <div>
                 <p class="place__paragraph">
                   Почти весь полуостров находится за Полярным кругом. Саамская
@@ -192,13 +192,6 @@
           <div class="place">
             <div class="place__container">
               <h2 class="place__title">Алтай</h2>
-              <img
-                class="place__image"
-                src="./images/place-altai.jpg"
-                alt="Картинка - Алтай"
-              />
-            </div>
-            <div class="place__wrapper">
               <div class="place__website">
                 <h3 class="place__url-heading">URL</h3>
                 <a
@@ -207,6 +200,13 @@
                   >YouTube
                 </a>
               </div>
+            </div>
+            <div class="place__wrapper">
+              <img
+                class="place__image"
+                src="./images/place-altai.jpg"
+                alt="Картинка - Алтай"
+              />
               <div>
                 <p class="place__paragraph">
                   Алтай — одно из красивейших мест в России. В первую очередь
@@ -228,19 +228,19 @@
           <div class="place">
             <div class="place__container">
               <h2 class="place__title">Зимний Байкал</h2>
-              <img
-                class="place__image"
-                src="./images/place-winter-baikal.jpg"
-                alt="Картинка - Зимний Байкал"
-              />
-            </div>
-            <div class="place__wrapper">
               <div class="place__website">
                 <h3 class="place__url-heading">URL</h3>
                 <a class="place__link" href="https://vk.com/baikalmile"
                   >https://vk.com/baikalmile
                 </a>
               </div>
+            </div>
+            <div class="place__wrapper">
+              <img
+                class="place__image"
+                src="./images/place-winter-baikal.jpg"
+                alt="Картинка - Зимний Байкал"
+              />
               <div>
                 <p class="place__paragraph">
                   Всем известен Байкал как крупнейшее озеро в мире. Многие также
@@ -261,19 +261,19 @@
           <div class="place">
             <div class="place__container">
               <h2 class="place__title">Карелия</h2>
-              <img
-                class="place__image"
-                src="./images/place-karelia.jpg"
-                alt="Картинка - Карелия"
-              />
-            </div>
-            <div class="place__wrapper">
               <div class="place__website">
                 <h3 class="place__url-heading">URL</h3>
                 <a class="place__link" href="http://vodlozero.ru"
                   >http://vodlozero.ru/
                 </a>
               </div>
+            </div>
+            <div class="place__wrapper">
+              <img
+                class="place__image"
+                src="./images/place-karelia.jpg"
+                alt="Картинка - Карелия"
+              />
               <div>
                 <p class="place__paragraph">
                   Сибирь заканчивается не на Урале, а в Карелии: образующая
@@ -291,9 +291,44 @@
             </div>
           </div>
         </section>
-        <section class="cover"></section>
+        <section class="cover">
+          <a
+            class="cover__background"
+            href="https://stampsy.com/na-elektrichkakh-do-baikala"
+          >
+            <div class="cover__overlay"></div>
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
+            <p class="cover__subtitle">
+              До Байкала «на собаках» По мотивам учебной темы о Транссибе —
+              путешествие от столицы до Байкала на электричках.
+            </p>
+          </a>
+        </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <ul class="footer__links">
+          <li>
+            <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+          </li>
+          <li>
+            <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+          </li>
+          <li>
+            <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+          </li>
+          <li>
+            <a class="footer__link" href="https://calendar.yandex.ru"
+              >Календарь
+            </a>
+          </li>
+          <li>
+            <a class="footer__link" href="https://travel.yandex.ru"
+              >Путешествия
+            </a>
+          </li>
+        </ul>
+        <p class="footer__copyright">© 2022. Васильева Елена</p>
+      </footer>
     </div>
   </body>
 </html>
