--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
           </li>
         </ul>
         <p class="footer__copyright">© 2022. Васильева Елена</p>
-      </footer>
+      </footer-->
     </div>
   </body>
 </html>
