добавлены все модификаторы и псевдоклассы для смены языков

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
   </head>
-  <body>
+  <body class="pages">
     <div class="page">
       <header class="header">
         <img
@@ -48,13 +48,13 @@
             стране. Мы выбрали и описали некоторые интересные места, достойные
             вашего отпуска.
           </p>
-          <p class="intro__list">
-            Часовых поясов 11<br />
-            Объектов природного наследия ЮНЕСКО 12<br />
-            Объектов культурного наследия ЮНЕСКО 16<br />
-            Природных заповедников 105<br />
-            Аэропортов 241
-          </p>
+          <div>
+          <p class="intro__list intro__list_font-weight_Bold">Часовых поясов <span class="intro__list intro__list_font-weight_Regular">11</span></p>
+          <p class="intro__list intro__list_font-weight_Bold">Объектов природного наследия ЮНЕСКО <span class="intro__list intro__list_font-weight_Regular">12</span></p>
+          <p class="intro__list intro__list_font-weight_Bold">Объектов культурного наследия ЮНЕСКО <span class="intro__list intro__list_font-weight_Regular">16</span></p>
+          <p class="intro__list intro__list_font-weight_Bold">Природных заповедников <span class="intro__list intro__list_font-weight_Regular">105</span></p>
+          <p class="intro__list intro__list_font-weight_Bold">Аэропортов <span class="intro__list intro__list_font-weight_Regular">241</span></p>
+        </div>
         </section>
         <section class="photo-grid">
           <img
@@ -307,7 +307,7 @@
             </a>
           </li>
         </ul>
-        <p class="footer__copyright">© 2022. Васильева Елена</p>
+        <p class="footer__copyright">© 2023. Васильева Елена</p>
       </footer-->
     </div>
   </body>
