добавлен модификатор для языков вместо псевдокласса

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           src="./images/header-logo.svg"
           alt="Логотип Россия"
         />
-        <a class="header__lang-link" href="#">Ru</a>
+        <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
         <a class="header__lang-link" href="#">En</a>
       </header>
       <main class="content">
