--- a/index.html
+++ b/index.html
@@ -49,12 +49,37 @@
             вашего отпуска.
           </p>
           <div>
-          <p class="intro__list intro__list_font-weight_Bold">Часовых поясов <span class="intro__list intro__list_font-weight_Regular">11</span></p>
-          <p class="intro__list intro__list_font-weight_Bold">Объектов природного наследия ЮНЕСКО <span class="intro__list intro__list_font-weight_Regular">12</span></p>
-          <p class="intro__list intro__list_font-weight_Bold">Объектов культурного наследия ЮНЕСКО <span class="intro__list intro__list_font-weight_Regular">16</span></p>
-          <p class="intro__list intro__list_font-weight_Bold">Природных заповедников <span class="intro__list intro__list_font-weight_Regular">105</span></p>
-          <p class="intro__list intro__list_font-weight_Bold">Аэропортов <span class="intro__list intro__list_font-weight_Regular">241</span></p>
-        </div>
+            <p class="intro__list intro__list_font-weight_Bold">
+              Часовых поясов
+              <span class="intro__list intro__list_font-weight_Regular"
+                >11</span
+              >
+            </p>
+            <p class="intro__list intro__list_font-weight_Bold">
+              Объектов природного наследия ЮНЕСКО
+              <span class="intro__list intro__list_font-weight_Regular"
+                >12</span
+              >
+            </p>
+            <p class="intro__list intro__list_font-weight_Bold">
+              Объектов культурного наследия ЮНЕСКО
+              <span class="intro__list intro__list_font-weight_Regular"
+                >16</span
+              >
+            </p>
+            <p class="intro__list intro__list_font-weight_Bold">
+              Природных заповедников
+              <span class="intro__list intro__list_font-weight_Regular"
+                >105</span
+              >
+            </p>
+            <p class="intro__list intro__list_font-weight_Bold">
+              Аэропортов
+              <span class="intro__list intro__list_font-weight_Regular"
+                >241</span
+              >
+            </p>
+          </div>
         </section>
         <section class="photo-grid">
           <img
@@ -135,8 +160,8 @@
             <div>
               <p class="place__paragraph">
                 Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
-                водных горизонта — спокойного Куршского залива с одной стороны
-                и подёрнутого рябью волн Балтийского моря с другой. Уникальная
+                водных горизонта — спокойного Куршского залива с одной стороны и
+                подёрнутого рябью волн Балтийского моря с другой. Уникальная
                 природная зона на краю российского анклава.
               </p>
               <p class="place__paragraph">
@@ -144,8 +169,8 @@
                 путешественника и исследователя там же по соседству — самая
                 западная точка России, Балтийская коса, — и немецкое наследие
                 россыпи небольших приморских городов. Атмосфера здешних мест
-                исключает суету, окуная в спокойствие природы и запах
-                стального, прохладного моря.
+                исключает суету, окуная в спокойствие природы и запах стального,
+                прохладного моря.
               </p>
             </div>
           </div>
@@ -167,17 +192,17 @@
             <div>
               <p class="place__paragraph">
                 Почти весь полуостров находится за Полярным кругом. Саамская
-                тундра, от которой на юг — тайга, а на север — Ледовитый
-                океан, прикидывающийся Баренцевым морем.
+                тундра, от которой на юг — тайга, а на север — Ледовитый океан,
+                прикидывающийся Баренцевым морем.
               </p>
               <p class="place__paragraph">
                 Возможно, вы смотрели Звягинцева и даже слышали историю
-                арктического фестиваля в Териберке. Возможно, слово «Хибины»
-                не осталось под снегом школьных воспоминаний об уроках
-                географии. Возможно, вы не интересовались пронизывающей земную
-                кору сверхглубокой скважиной, а от апатитов вас давно
-                накрывает апатия. Но ваша мечта увидеть северное сияние
-                начинает сбываться с билетом в Мурманск.
+                арктического фестиваля в Териберке. Возможно, слово «Хибины» не
+                осталось под снегом школьных воспоминаний об уроках географии.
+                Возможно, вы не интересовались пронизывающей земную кору
+                сверхглубокой скважиной, а от апатитов вас давно накрывает
+                апатия. Но ваша мечта увидеть северное сияние начинает сбываться
+                с билетом в Мурманск.
               </p>
             </div>
           </div>
@@ -199,17 +224,17 @@
             <div>
               <p class="place__paragraph">
                 Алтай — одно из красивейших мест в России. В первую очередь
-                из-за гор: если ехать вдоль хребта, вы увидите склоны,
-                усыпанные соснами, горные реки и озёра. А если вы откроете в
-                автомобиле окна, сможете познакомиться с невидимым чудом
-                здешних мест — горным воздухом.
+                из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
+                соснами, горные реки и озёра. А если вы откроете в автомобиле
+                окна, сможете познакомиться с невидимым чудом здешних мест —
+                горным воздухом.
               </p>
               <p class="place__paragraph">
-                Климат на Алтае умеренный, поэтому ехать сюда лучше всего
-                летом. Так вы увидите всё разнообразие местной флоры и фауны.
-                По лесам Алтая бродят лоси, над хребтами летают орлы, а на
-                равнинах пасутся косули. И знаменитые манулы — тоже обитатели
-                Алтайского края.
+                Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
+                Так вы увидите всё разнообразие местной флоры и фауны. По лесам
+                Алтая бродят лоси, над хребтами летают орлы, а на равнинах
+                пасутся косули. И знаменитые манулы — тоже обитатели Алтайского
+                края.
               </p>
             </div>
           </div>
@@ -237,8 +262,7 @@
                 соревнований по скийорингу. Это такой вид спорта, когда лыжник
                 привязывает себя к мотоциклу, и тандем старается развить как
                 можно бóльшую скорость на льду. В марте 2019 года на фестивале
-                «Байкальская миля» был поставлен мировой рекорд — 197.011
-                км/ч.
+                «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
               </p>
             </div>
           </div>
@@ -257,16 +281,15 @@
             />
             <div>
               <p class="place__paragraph">
-                Сибирь заканчивается не на Урале, а в Карелии: образующая
-                тайгу сибирская лиственница не растёт западнее Водлозера. Зато
-                здесь она вымахивает на 30 метров — леса карельских
-                национальных парков из-за непроходимых болот никогда не знали
-                топора. Некоторым соснам уже больше чем полтысячелетия.
-                Прикоснитесь к живому существу, видевшему солнце раньше, чем
-                увидал его Иван Грозный. В девственном лесу на сотню
-                километров не встретишь тропы. А на редких тропинках деревья в
-                паре метров от земли помечены медвежьими когтями. Чтобы все
-                знали, кто тут хозяин.
+                Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
+                сибирская лиственница не растёт западнее Водлозера. Зато здесь
+                она вымахивает на 30 метров — леса карельских национальных
+                парков из-за непроходимых болот никогда не знали топора.
+                Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к
+                живому существу, видевшему солнце раньше, чем увидал его Иван
+                Грозный. В девственном лесу на сотню километров не встретишь
+                тропы. А на редких тропинках деревья в паре метров от земли
+                помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
               </p>
             </div>
           </div>
@@ -308,7 +331,7 @@
           </li>
         </ul>
         <p class="footer__copyright">© 2023. Васильева Елена</p>
-      </footer-->
+      </footer>
     </div>
   </body>
 </html>
