добавлен список ul в intro в html

--- a/index.html
+++ b/index.html
@@ -48,38 +48,38 @@
             стране. Мы выбрали и описали некоторые интересные места, достойные
             вашего отпуска.
           </p>
-          <div>
-            <p class="intro__list intro__list_font-weight_Bold">
+          <ul class="intro__list">
+            <li>
               Часовых поясов
-              <span class="intro__list intro__list_font-weight_Regular"
+              <span class="intro__span"
                 >11</span
               >
-            </p>
-            <p class="intro__list intro__list_font-weight_Bold">
+            </li>
+            <li>
               Объектов природного наследия ЮНЕСКО
-              <span class="intro__list intro__list_font-weight_Regular"
+              <span class="intro__span"
                 >12</span
               >
-            </p>
-            <p class="intro__list intro__list_font-weight_Bold">
+            </li>
+            <li>
               Объектов культурного наследия ЮНЕСКО
-              <span class="intro__list intro__list_font-weight_Regular"
+              <span class="intro__span"
                 >16</span
               >
-            </p>
-            <p class="intro__list intro__list_font-weight_Bold">
+            </li>
+            <li>
               Природных заповедников
-              <span class="intro__list intro__list_font-weight_Regular"
+              <span class="intro__Regular"
                 >105</span
               >
-            </p>
-            <p class="intro__list intro__list_font-weight_Bold">
+            </li>
+            <li>
               Аэропортов
-              <span class="intro__list intro__list_font-weight_Regular"
+              <span class="intro__list intro__list_font-weight_span"
                 >241</span
               >
-            </p>
-          </div>
+            </li>
+          </ul>
         </section>
         <section class="photo-grid">
           <img
