убрана ошибка в слове span

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
             </li>
             <li>
               Природных заповедников
-              <span class="intro__Regular"
+              <span class="intro__span"
                 >105</span
               >
             </li>
             <li>
               Аэропортов
-              <span class="intro__list intro__list_font-weight_span"
+              <span class="intro__span"
                 >241</span
               >
             </li>
