переопределены интервалы размеров экранов 1280, 1152-960, 959-720, 719-540, 539-320

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>russian-travel</title>
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="stylesheet" href="./fonts/fonts.css" />
   </head>
   <body class="pages">
     <div class="page">
@@ -31,7 +30,7 @@
               alt="Картинка с
             путешественником"
             />
-            <p class="lead__caption">ВАША ПОЛКА — ВЕРХНЯЯ</p>
+            <p class="lead__caption">ваша полка — верхняя</p>
           </div>
         </section>
         <section class="intro">
@@ -147,7 +146,7 @@
               src="./images/place-kosa.jpg"
               alt="Картинка - куршская коса"
             />
-            <div>
+            <div place__paragraphs>
               <p class="place__paragraph">
                 Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
                 водных горизонта — спокойного Куршского залива с одной стороны и
@@ -179,7 +178,7 @@
               src="./images/place-kolsky.jpg"
               alt="Картинка - кольский"
             />
-            <div>
+            <div place__paragraphs>
               <p class="place__paragraph">
                 Почти весь полуостров находится за Полярным кругом. Саамская
                 тундра, от которой на юг — тайга, а на север — Ледовитый океан,
@@ -211,7 +210,7 @@
               src="./images/place-altai.jpg"
               alt="Картинка - Алтай"
             />
-            <div>
+            <div place__paragraphs>
               <p class="place__paragraph">
                 Алтай — одно из красивейших мест в России. В первую очередь
                 из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
@@ -269,7 +268,7 @@
               src="./images/place-karelia.jpg"
               alt="Картинка - Карелия"
             />
-            <div>
+            <div place__paragraphs>
               <p class="place__paragraph">
                 Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
                 сибирская лиственница не растёт западнее Водлозера. Зато здесь
@@ -299,6 +298,7 @@
         </section>
       </main>
       <footer class="footer">
+        <nav class="menu">
         <ul class="footer__links">
           <li>
             <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
@@ -320,6 +320,7 @@
             </a>
           </li>
         </ul>
+      </nav>
         <p class="footer__copyright">© 2023. Васильева Елена</p>
       </footer>
     </div>
