--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
           >
             <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__subtitle">
-              До Байкала «на собаках» По мотивам учебной темы о Транссибе —
+              По мотивам учебной темы о Транссибе —
               путешествие от столицы до Байкала на электричках.
             </p>
             <div class="cover__overlay"></div>
