исправены все ошибк. Ревью-1

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         </section>
         <section class="cover">
           <a
-            class="cover__background"
+            class="cover__background cover__overlay"
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
           >
             <h2 class="cover__title">До Байкала «на собаках»</h2>
@@ -293,7 +293,6 @@
               По мотивам учебной темы о Транссибе —
               путешествие от столицы до Байкала на электричках.
             </p>
-            <div class="cover__overlay"></div>
           </a>
         </section>
       </main>
