исправена ошибка в названии блока place__paragraphs

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               src="./images/place-kosa.jpg"
               alt="Картинка - куршская коса"
             />
-            <div place__paragraphs>
+            <div class="place__paragraphs">
               <p class="place__paragraph">
                 Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
                 водных горизонта — спокойного Куршского залива с одной стороны и
@@ -178,7 +178,7 @@
               src="./images/place-kolsky.jpg"
               alt="Картинка - кольский"
             />
-            <div place__paragraphs>
+            <div class="place__paragraphs">
               <p class="place__paragraph">
                 Почти весь полуостров находится за Полярным кругом. Саамская
                 тундра, от которой на юг — тайга, а на север — Ледовитый океан,
@@ -210,7 +210,7 @@
               src="./images/place-altai.jpg"
               alt="Картинка - Алтай"
             />
-            <div place__paragraphs>
+            <div class="place__paragraphs">
               <p class="place__paragraph">
                 Алтай — одно из красивейших мест в России. В первую очередь
                 из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
@@ -268,7 +268,7 @@
               src="./images/place-karelia.jpg"
               alt="Картинка - Карелия"
             />
-            <div place__paragraphs>
+            <div class="place__paragraphs">
               <p class="place__paragraph">
                 Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
                 сибирская лиственница не растёт западнее Водлозера. Зато здесь
@@ -290,36 +290,38 @@
           >
             <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__subtitle">
-              По мотивам учебной темы о Транссибе —
-              путешествие от столицы до Байкала на электричках.
+              По мотивам учебной темы о Транссибе — путешествие от столицы до
+              Байкала на электричках.
             </p>
           </a>
         </section>
       </main>
       <footer class="footer">
         <nav class="menu">
-        <ul class="footer__links">
-          <li>
-            <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
-          </li>
-          <li>
-            <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
-          </li>
-          <li>
-            <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
-          </li>
-          <li>
-            <a class="footer__link" href="https://calendar.yandex.ru"
-              >Календарь
-            </a>
-          </li>
-          <li>
-            <a class="footer__link" href="https://travel.yandex.ru"
-              >Путешествия
-            </a>
-          </li>
-        </ul>
-      </nav>
+          <ul class="footer__links">
+            <li>
+              <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+            </li>
+            <li>
+              <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+            </li>
+            <li>
+              <a class="footer__link" href="https://rasp.yandex.ru"
+                >Расписание</a
+              >
+            </li>
+            <li>
+              <a class="footer__link" href="https://calendar.yandex.ru"
+                >Календарь
+              </a>
+            </li>
+            <li>
+              <a class="footer__link" href="https://travel.yandex.ru"
+                >Путешествия
+              </a>
+            </li>
+          </ul>
+        </nav>
         <p class="footer__copyright">© 2023. Васильева Елена</p>
       </footer>
     </div>
