--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
               <h3 class="place__url-heading">URL</h3>
-              <a class="place__link" href="http://park-kosa.ru"
+              <a class="place__link" target="_blank" href="http://park-kosa.ru"
                 >park-kosa.ru
               </a>
             </div>
@@ -169,6 +169,7 @@
               <h3 class="place__url-heading">URL</h3>
               <a
                 class="place__link"
+                target="_blank"
                 href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                 >National Geographic
               </a>
@@ -201,6 +202,7 @@
               <h3 class="place__url-heading">URL</h3>
               <a
                 class="place__link"
+                target="_blank"
                 href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ"
                 >YouTube
               </a>
@@ -231,7 +233,10 @@
             <h2 class="place__title">Зимний Байкал</h2>
             <div class="place__website">
               <h3 class="place__url-heading">URL</h3>
-              <a class="place__link" href="https://vk.com/baikalmile"
+              <a
+                class="place__link"
+                target="_blank"
+                href="https://vk.com/baikalmile"
                 >https://vk.com/baikalmile
               </a>
             </div>
@@ -259,7 +264,7 @@
             <h2 class="place__title">Карелия</h2>
             <div class="place__website">
               <h3 class="place__url-heading">URL</h3>
-              <a class="place__link" href="http://vodlozero.ru"
+              <a class="place__link" target="_blank" href="http://vodlozero.ru"
                 >http://vodlozero.ru/
               </a>
             </div>
@@ -286,6 +291,7 @@
         <section class="cover">
           <a
             class="cover__background cover__overlay"
+            target="_blank"
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
           >
             <h2 class="cover__title">До Байкала «на собаках»</h2>
@@ -300,23 +306,42 @@
         <nav class="menu">
           <ul class="footer__links">
             <li>
-              <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+              <a
+                class="footer__link"
+                target="_blank"
+                href="https://yandex.ru/maps"
+                >Карты</a
+              >
             </li>
             <li>
-              <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+              <a
+                class="footer__link"
+                target="_blank"
+                href="https://yandex.ru/pogoda"
+                >Погода</a
+              >
             </li>
             <li>
-              <a class="footer__link" href="https://rasp.yandex.ru"
+              <a
+                class="footer__link"
+                target="_blank"
+                href="https://rasp.yandex.ru"
                 >Расписание</a
               >
             </li>
             <li>
-              <a class="footer__link" href="https://calendar.yandex.ru"
+              <a
+                class="footer__link"
+                target="_blank"
+                href="https://calendar.yandex.ru"
                 >Календарь
               </a>
             </li>
             <li>
-              <a class="footer__link" href="https://travel.yandex.ru"
+              <a
+                class="footer__link"
+                target="_blank"
+                href="https://travel.yandex.ru"
                 >Путешествия
               </a>
             </li>
